[gd_scene load_steps=7 format=3 uid="uid://bqihypm5ugqbm"]

[ext_resource type="Script" uid="uid://c484511if4w01" path="res://mobs/herobrine.gd" id="1_aambm"]
[ext_resource type="Texture2D" uid="uid://ch8k3y8t4xda4" path="res://oak_woods_v1.0/Herobrine/dsa.png" id="2_88bf1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7r4b"]
size = Vector2(49, 73)

[sub_resource type="CircleShape2D" id="CircleShape2D_88bf1"]
radius = 103.00485

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88bf1"]
size = Vector2(59, 74)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_88bf1"]
radius = 7.0
height = 52.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_aambm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_v7r4b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.9073486e-06, 0)
scale = Vector2(0.058676466, 0.058676466)
texture = ExtResource("2_88bf1")

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_88bf1")

[node name="death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
position = Vector2(1.5, 5)
shape = SubResource("RectangleShape2D_88bf1")

[node name="Head" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(1, -37)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_88bf1")

[node name="Herobrine_Text" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
horizontal_alignment = 1

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="Head" to="." method="_on_head_body_entered"]
[connection signal="body_exited" from="Head" to="." method="_on_head_body_exited"]
